--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,12 @@
   </head>
 
   <body>
-	 <div class="container">
-	   <%= yield %>
-	 </div>
+  
+  <%= render :partial => "layouts/header" %>
+  
+ 	<%= yield %>
+  
+  <%= render :partial => "layouts/footer"%>
+
   </body>
 </html>
