added the contact model to create the contact form with slim

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,14 +5,15 @@
           <%= link_to "Home", homes_path, :class => "button" %>
         </li>
         <li>
-          <%= link_to "About Me", foundation_info_homes_path, :class => "button" %>
+          <%= link_to "Foundation Info", foundation_info_homes_path, :class => "button" %>
         </li>
-        <li><a href="#" class="button">Link 2</a></li>
-        <li><a href="#" class="button">Link 3</a></li>
-        <li><a href="#" class="button">Link 4</a></li>
-        <li><a href="#" class="button">Link 5</a></li>
-        <li><a href="#" class="button">Link 6</a></li>
-        <li><a href="#" class="button">Link 7</a></li>
+         <li>
+          <%= link_to "Contact Us", contact_homes_path, :class => "button" %>
+        </li>
+        <li>
+          <%= link_to "About Us", about_homes_path, :class => "button" %>
+        </li>
+        
       </ul>
     </div>
   </div>
