--- a/app/views/homes/foundation_info.html.slim
+++ b/app/views/homes/foundation_info.html.slim
@@ -1,29 +1,29 @@
-  .large-8.columns
-    h4 This is a content section.
-    p Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.
-    p Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.
-    p
-      a.secondary.small.button href="#"  Next Page →
-  .large-4.columns
-    ul.small-block-grid-3
-      li
-        a href="#" 
-          img src="http://placehold.it/120x120" /
-      li
-        a href="#" 
-          img src="http://placehold.it/120x120" /
-      li
-        a href="#" 
-          img src="http://placehold.it/120x120" /
-      li
-        a href="#" 
-          img src="http://placehold.it/120x120" /
-      li
-        a href="#" 
-          img src="http://placehold.it/120x120" /
-      li
-        a href="#" 
-          img src="http://placehold.it/120x120" /
+.large-8.columns
+  h4 About Me
+  p Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.
+  p Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.
+  p
+    a.secondary.small.button href="#"  Next Page →
+.large-4.columns
+  ul.small-block-grid-3
+    li
+      a href="#" 
+        img src="http://placehold.it/120x120" /
+    li
+      a href="#" 
+        img src="http://placehold.it/120x120" /
+    li
+      a href="#" 
+        img src="http://placehold.it/120x120" /
+    li
+      a href="#" 
+        img src="http://placehold.it/120x120" /
+    li
+      a href="#" 
+        img src="http://placehold.it/120x120" /
+    li
+      a href="#" 
+        img src="http://placehold.it/120x120" /
 .row
   .large-12.columns
     .panel
