--- a/app/views/homes/_contact.html.slim
+++ b/app/views/homes/_contact.html.slim
@@ -1,1 +1,24 @@
-h2 Fill up below form to add the contact details
+.row
+	.large-8.columns
+		h2 Fill up below form to add the contact details
+
+= form_for @contact, :url => save_contact_homes_path do |f|
+	.row
+		.large-4.columns
+			= f.label :name
+			= f.text_field :name, :placeholder => "Enter your name"
+	.row
+		.large-4.columns
+			= f.label :email
+			= f.text_field :email, :placeholder => "Enter your email"
+	.row
+		.large-4.columns
+			= f.label :address
+			= f.text_area :address, :placeholder => "Enter your Address here"
+	.row
+		.large-4.columns
+			= f.label :message
+			= f.text_area :message, :placeholder => "Enter your Message here"
+	.row
+		.large-4.columns
+			= f.submit :class => "button expand tiny round"
